# opik-e2e-customer-support-workshop

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  EXAMPLE_QUERIES.md  Makefile  README.md  app.py  config.yml  pyproject.toml  requirements.txt
.cursor/: mcp.json
.cursor/rules/: code-style.mdc  comet-opik-docs.mdc  configuration-pattern.mdc  opik-integration.mdc  project-context.mdc
data/: faq.txt  ohm_sweet_ohm.db  orders.json  products.json  promotions.json  stores.json
data/chroma_db/: chroma.sqlite3
notebooks/: test.ipynb
scripts/: build_vector_db.py  create_db.py
src/customer_support_agent/: __init__.py  agent.py  prompts.py
src/customer_support_agent/utils/: __init__.py  config.py  helper.py  logging.py
tests/: conftest.py  test_generic.py  test_params.yml
